fixed a few dark mode bugs

--- a/countries-app/src/styles/Filter.scss
+++ b/countries-app/src/styles/Filter.scss
@@ -29,7 +29,7 @@
     padding: 1rem 0 1rem 1.5rem;
     width: 11.1rem;
     border-radius: 0.5rem;
-    filter: drop-shadow(0px 5px 10px #e9e9e9);
+    filter: drop-shadow(0px 5px 10px #3d3d3d3d);
     z-index: 1;
 
     li {
