--- a/countries-app/src/styles/Search.scss
+++ b/countries-app/src/styles/Search.scss
@@ -22,7 +22,8 @@
 }
 
 .lightSearch {
-    @include colors.lightMode();
+    background-color: colors.$lgtMdEle;
+    color: colors.$lgtMdIput;
     background-image: url(./icons/search-outline.svg);
 }
 
